search bug(not showing user) soldev,user show section styling,dashboard section styling

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,3 +58,15 @@ a {
     color: var(--primary);
     text-decoration: underline;
 }
+
+
+/* ////////////////////////////Show user !!! later change to new css file */
+
+
+/* Show user */
+
+.user-img {
+    width: 200px;
+    align-self: center;
+    margin-top: 40px;
+}
